      Tilemap -- to the map editor, available in Tile, Wall, Foe, and
      Zone modes! [Ralph]
    * Press Ctrl+Z and Ctrl+Y to Undo and Redo changes in the tilemap,
      wallmap, foemap, and zonemap editors! These share a single
      near-infinite history. Certain operations delete the history.
      [Ralph]
    * Attack maximum Extra Damage raised to 32767%

  * Bugfixes
    * Bug 749: Attacks configured to do No Damage still do damage when
      used outside battle [James]
    * Bug 819: %-based attacks don't heal outside of battle [James]
    * Bug 9: Elemental strength/weakness/absorbtion is not yet applied
      to spells used outside of battle. [James]
    * Fixed a case where "add hero" could add more heroes than you
      are supposed to be able to have under certain conditions [James]
    * Bug 486: Chained attacks fail on stored dead targets
      [James, msw188]
    * Bug 851: Instead-chains fail or cause other chains to fail under
      certain conditions [James msw188]
    * Using an item that triggers a text box could cause a menu
      double-close warning if the menu item that opened the items menu
      was set to always close the menu [James]
    * Bug 845: upgrading old games that contain no shop stuff lump
      always produced a confusing warning [James]
    * 'Set tag', 'Toggle tag' and 'Close menu' options were ignored
      when menu items were triggered via "use menu item" [Ralph]
    * NPCs appearance was not updated according to tags set from a
      menu item or from the tag debug menu [Ralph]
    * "create NPC" could create NPCs with garbage 'extra data' [Ralph]
    * gfx_directx: fixed garbage and window resizing at startup [Jay]
    * gfx_directx: fixed slow screen fades and framerate [Jay]
    * Your MP (and the rest of the spell menu) is no longer hidden
      while you target a spell outside of battle. [James]
    * Scrolling a sprite or a maptile is now done with the new scroll